Fix: Canvas size (overflow) & Animation (field4)

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-body {
-
-}
 .s {
     background-color: red;
 }
 
 .margin-top {
     margin-top: 30px;
+}
+
+.canvas {
+    width: 100%;
 }
